--- a/src/fullwebsite.module.css
+++ b/src/fullwebsite.module.css
@@ -45,6 +45,11 @@ form input[type="submit"]:active {
    background: linear-gradient(to left, cornflowerblue,royalblue);
 }
 
+.container {
+   width: 70%;
+   margin: 20px auto 0px;
+}
+
 .recipe {
    border-radius: 5px;
    background-color: rgb(255, 207, 103);
@@ -52,8 +57,7 @@ form input[type="submit"]:active {
    padding: 15px;
    box-shadow: 3px 4px 10px #ddd;
    cursor: pointer;
-   margin: 20px auto 0px;
-   width: 95%;
+   margin-bottom: 20px;
 }
 
 
